# epistemic-orchestrator

./: .gitignore  AGENTS.md  CHECKPOINT.md  README.md  pyproject.toml
.apex/: feedback_log.json  security-report.json
.epistemic/: cross_run_tracker.json
.github/workflows/: apex-bot.yml  ci.yml  (+2 more)
apex_orchestrator.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
app/: cli.py  daemon.py  event_stream.py  hook_installer.py  main.py  orchestrator.py
config/: default.yaml  models.yaml
k8s/: crd.yaml
plugins/: audit.py  index.json
scripts/: apex_github_bot.py  benchmark_consensus.py  fix_coverage.py  fix_docstrings.py
tests/: test_action_executor.py  test_advanced_refactoring.py  test_agent_architecture.py  test_agent_dependency.py  test_agent_docstring.py  test_agent_memory.py  test_agent_security.py  test_agent_test_stub.py  test_benchmark_suite.py  test_branch_focus.py  test_claim_analyzer.py  test_cli_consensus_memory.py  test_cli_report.py  test_compressed_mode.py  test_daemon.py  test_dashboard.py  test_debate.py  test_decomposer.py  test_distributed_swarm.py  test_docstring_agent.py  test_enhanced_safety_governor.py  test_error_handling.py  test_event_stream.py  test_execution_foundation.py  test_feedback_loop.py  test_fractal_5whys.py  test_fractal_agents.py  test_fractal_cache.py  test_fractal_cli.py  test_fractal_cortex.py  test_fractal_cross_run.py  test_git_auto_commit.py  test_git_pr_loop.py  test_github_bot.py  test_github_fractal_comment.py  test_hook_installer.py  test_k8s_operator.py  test_llm_integration.py  test_llm_router.py  test_llm_voter.py  (+26 more)
(+117 files in other folders)
